# CLAD

./: .gitignore  LICENSE  README.md  pyproject.toml
casesim/: __init__.py  cli.py  config.py
casesim/discovery/: __init__.py  blog_scraper.py  citation_resolver.py  discovery.py  filters.py  strategies.py
casesim/extraction/: __init__.py  openai_llm.py  rule_based.py
casesim/parsing/: __init__.py  parser.py
casesim/qa/: __init__.py  consultation_suitability.py  validator.py
casesim/schemas/: __init__.py  enums.py  models.py
casesim/segmentation/: __init__.py  segmenter.py
casesim/sim/: __init__.py  runner.py
casesim/sources/: __init__.py  austlii.py  bailii.py  base.py  canlii.py  courtlistener.py  hklii.py  jade.py  nzlii.py  singapore.py
casesim/utils/: __init__.py  database.py  hashing.py  logging.py
config/: keywords.yaml
cost/: __init__.py  analyzer.py  cli.py  extractor.py  models.py  pricing.py
data/cases/: bailii-2016-ewhc-407-qb.json  bailii-2018-ewhc-3461-qb.json  (+453 more)
figures/: bubble_plot.R  generate_figures.R  heatmap_readability.R  pareto.R  spider_plot.R
gui/: api.py  case_loader.py  evaluator.py  simulator.py  utils.py
liability/: __init__.py  classifier.py  cli.py  export.py  ingest.py  models.py  readability.py
results/: combined_validation.csv  cost_details.csv  cost_summary.csv  criteria.csv  evaluator_minority_by_score.csv  evaluator_minority_votes.csv  evaluator_split_patterns.csv  procedure_avg_counts.csv  procedure_categories_heatmap.csv  procedure_categories_wide.csv  procedure_per_case_summary.csv  procedure_subcategories.csv  runs.csv  supplementary_table1.csv
scripts/: batch_rescore.py  batch_rescore_claude.py  batch_rescore_gpt5.py  batch_rescore_grok.py  batch_rescore_primary.py  calc_primary_stats.py  calc_primary_stats_full.py  generate_supplementary_table.py  quarantine_untestable.py  test_llm.py  test_llm_concise.py  validate_and_filter.py
tests/: conftest.py  test_parsing.py  test_schemas.py  test_validation.py
(+3 files in other folders)
