[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clad-benchmark"
version = "1.0.0"
description = "CLAD: Clinical Legal Accountability Dataset - A benchmark for evaluating medical AI using real malpractice court decisions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["medical-ai", "benchmark", "malpractice", "llm-evaluation", "clinical-decision-support"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.20.0",
    "python-dateutil>=2.8.0",

    # HTTP & parsing
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",

    # LLM integration
    "openai>=1.6.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",

    # API server
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",

    # Storage
    "aiosqlite>=0.19.0",
    "aiofiles>=23.2.0",
    "diskcache>=5.6.0",

    # Utilities
    "robotexclusionrulesparser>=1.7.0",
    "xxhash>=3.4.0",
]

[project.optional-dependencies]
readability = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.2",
    "textstat>=0.7.3",
    "spacy>=3.7.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]
export = [
    "pyarrow>=14.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["casesim", "gui", "liability", "cost"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
